--- a/index.html
+++ b/index.html
@@ -9,26 +9,30 @@
 <body>
     <header>
         <h1>reinaldoabreu90@outlook.com</h1>
-        <h2>WhatsApp</h2>
-        <img src="" alt="">
+        <h2>(31)9 9991 - 2627</h2>
+        <img src="imagens/imagen-zap.png" alt="WhatsApp">
     </header>
 
     <main>
-        <section>
-            <h1>REINALDO ABREU</h1>
-            <p>Ola! Seja bem-vindo ao meu mundo do Desenvolvimento Web.Hoje atualmente tenho 34 anos.Estou me especializando na de front-End .Tenho conhecimento em Wordpress ,html e Csse eja inicei os estudso em Jacascritp. Conheça alguns dos meus trabalhos que eu fiz nessa minha caminhada de estudos na área da programação.Bora lá!?</p>
-            <img src="" alt="">
-            <img src="" alt="">
-            <img src="" alt="">
-            <img src="" alt="">
-        </section>
+     <div class="sociais">
+        <img  src="imagens/facebook.png" alt="">
+        <img src="imagens/git.png" alt="">
+        <img src="imagens/instagran (1).png" alt="">
+        <img src="imagens/link.png" alt="">
+     </div>
+          
+    <section>
+        <h1>REINALDO ABREU</h1>
+        <p>Ola! Seja bem-vindo ao meu mundo do Desenvolvimento Web.Hoje atualmente tenho 34 anos.Estou me especializando na de front-End .Tenho conhecimento em Wordpress ,html e Csse eja inicei os estudso em Jacascritp. Conheça alguns dos meus trabalhos que eu fiz nessa minha caminhada de estudos na área da programação.Bora lá!?</p>
+    </section>
 
-        <section>
+    <img class="imgrei" src="imagens/rei.jpg" alt="">
 
-            <img src="" alt="">
-        </section>
+    
     </main>
 
-    <footer>@2024 reynaldurei1990 Todos os direitos reservados</footer>
+<footer>
+    <p>@2024 reynaldurei1990 Todos os direitos reservados</p>
+</footer>
 </body>
 </html>
