--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Reinaldo abreu</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style.css" media="all">
+    <link rel="stylesheet" href="estilos/retrato.css" media="screen and(orientation: portrait) ">
+    <link rel="stylesheet" href="estilos/paisagem.css" media="screen and (orientation: landscape)">
 </head>
 <body>
 
@@ -28,7 +30,6 @@
         <p>Ola! Seja bem-vindo ao meu mundo do Desenvolvimento Web.Hoje atualmente tenho 34 anos.Estou me especializando na de front-End .Tenho conhecimento em Wordpress ,html e Csse eja inicei os estudso em Jacascritp. Conheça alguns dos meus trabalhos que eu fiz nessa minha caminhada de estudos na área da programação.Bora lá!?</p>
     </section>
 
-    <img class="imgrei" src="imagens/rei.jpg" alt="">
 
     
     </main>
