--- a/index.html
+++ b/index.html
@@ -14,10 +14,21 @@
     <header>
 
         <div class="sociais">
-            <img  src="imagens/facebook.png" alt="">
-            <img src="imagens/git.png" alt="">
-            <img src="imagens/instagran (1).png" alt="">
-            <img src="imagens/link.png" alt="">
+            <a href="https://www.facebook.com/reinaldo.dossantos.940098" target="_blank">
+                <img  src="imagens/facebook.png" alt="">
+            </a>
+
+            <a href="https://github.com/Reinaldoabreu" target="_blank">
+                <img src="imagens/git.png" alt="">
+            </a>
+
+            <a href="https://www.instagram.com/reynaldurei1990/" target="_blank">
+                <img src="imagens/instagran (1).png" alt="">
+             </a>
+
+            <a href="www.linkedin.com/in/reinaldo-de-abreu-dos-santos-b3773b226" target="_blank">
+                <img src="imagens/link.png" alt="">
+            </a>
          </div>
       
     </header>
@@ -31,11 +42,11 @@
     </section>
 
 
-    
+  
     </main>
 
-<footer>
-    <p>@2024 reynaldurei1990 Todos os direitos reservados</p>
-</footer>
+    <footer>
+        <p>@2024 reynaldurei1990 Todos os direitos reservados</p>
+    </footer>
 </body>
 </html>
