--- a/index.html
+++ b/index.html
@@ -45,11 +45,7 @@
     <section>
         <h1>REINALDO ABREU</h1>
         <p>Ola! Seja bem-vindo ao meu mundo do Desenvolvimento Web.Hoje atualmente tenho 34 anos.Estou me especializando na área da programação web  ,em especial na parte do  Front-End .Tenho conhecimento em Wordpress ,html e Css. Conheça alguns dos meus trabalhos que eu fiz nessa minha caminhada de estudos na área da programação.Bora lá!?</p>
-    </section>
-
-
-  
-    </main>
+    </section><br>><br>><br>
 
     <footer>
         <p>@2024 reynaldurei1990 Todos os direitos reservados</p>
