--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
               <div class="nav-lista">
                 <ul>
                     <li class="nav-item">
-                      <a href="https://www.facebook.com/reinaldo.dossantos.940098/" target="_blank" class="nav-link">FACEBOOK</a>
+                      <a href="https://www.facebook.com/reinaldo.dossantos.940098/" target="_blank" class="nav-link">fACEBOOK</a>
                     </li>
 
                     <li class="nav-item"><a href="https://www.instagram.com/reynaldurei1990/" target="_blank" class="nav-link">INSTAGRAM</a></li>
